# cw-futurebot

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/agents/: systems-architect.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/.claude/agents/: futures-trading-expert.md  trading-ui-architect.md
backend/src/: config.py  contracts.py  indicators.py  main.py
backend/src/api/: deps.py
backend/src/api/routes/: logs.py  market_data.py  orders.py  positions.py  settings.py  signals.py  strategy.py  trades.py  ws.py
backend/src/broker/: base.py  ib_broker.py
backend/src/data/: base.py  ib_data.py
backend/src/db/: models.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 4de8f38292c9_add_app_settings_and_settings_audit_.py  af138ef468ba_add_mes_mnq_symbols.py  d9d20db64dbb_initial_schema.py
backend/src/engine/: decision.py  executor.py  reconciliation.py  risk.py
backend/src/news/: analyzer.py  base.py  factory.py  finnhub.py
backend/src/strategy/: base.py  bollinger_reversion.py  example.py  orb_momentum.py  vwap_trend.py
backend/src/telegram/: bot.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/logs/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: SettingsInitializer.tsx
frontend/src/hooks/: useMarketData.ts  useOrders.ts  useWebSocket.ts
frontend/src/lib/: api.ts  formatEvent.ts  timezone.ts  types.ts
(+15 files in other folders)
