[project]
name = "cw-futurebot"
version = "0.1.0"
description = "Futures trading algo bot for ES and NQ"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "ib_insync>=0.9.86",
    "python-telegram-bot>=21",
    "anthropic>=0.52",
    "finnhub-python>=2.4",
    "websockets>=14",
    "pandas>=2.2",
    "pandas-ta>=0.3.14b",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
